<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:title="@string/action_filter"
        app:showAsAction="collapseActionView"
        android:orderInCategory="1">

        <menu>
            <item
                android:id="@+id/action_filter_topRated"
                android:title="@string/action_filter_topRated"
                app:showAsAction="ifRoom"
                android:orderInCategory="1"/>

            <item
                android:id="@+id/action_filter_popular"
                android:title="@string/action_filter_popular"
                app:showAsAction="ifRoom"
                android:orderInCategory="2"/>

            <item
                android:id="@+id/action_filter_favorites"
                android:title="@string/action_filter_favorites"
                app:showAsAction="ifRoom"
                android:orderInCategory="3"/>
        </menu>

    </item>
</menu>